[tool.poetry]
name = "pybasic"
version = "0.0.1"
description = "Background and shading correction for microscopy images"
readme = "README.md"
license = "LICENSE"
authors = ["Sebastian Ahn <wahn1@bwh.harvard.edu>"]
keywords = [
    "microscopy",
    "imaging",
    "bio-imaging"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
]
repository = "https://github.com/biomicrodev/pybasic"
homepage = "https://jonaslab.bwh.harvard.edu"
packages = [{ include = "pybasic", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
bmd-perf = { git = "https://github.com/biomicrodev/bmd-perf.git", branch = "master" }
dask = "^2023.3"
distributed = "^2023.3"
imagecodecs = "^2023.1"
numpy = "^1.23"
pillow = "^9.4"
pint = "^0.20"
scikit-image = "^0.19"
scipy = "^1.9"
tifffile = "^2023.2"

[tool.poetry.group.dev.dependencies]
black = { version = "^23.1", extras = ["d"] }
graphviz = "^0.20"
ipywidgets = "^8.0"
jupyterlab = "^3.6"
matplotlib = "^3.7"
perfplot = "^0.10"
pytest = "^7.2"

[tool.poetry.scripts]
pybasic = "bin.pybasic:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
